# -RAG-

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_documents_baseline.py  0001_function_expansion.py  0002_auth_kb_memory.py  0003_add_user_memories_fk.py  0004_add_evaluation_results.py
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  init.sql  redis.conf
src/: config.py  main.py
src/api/: __init__.py  admin_routes.py  auth_routes.py  dependencies.py  errors.py  evaluation_routes.py  kb_routes.py  middleware.py  routes.py  schemas.py  session_routes.py  sse_events.py  streaming.py
src/auth/: __init__.py  dependencies.py  service.py  user_service.py
src/evaluation/: __init__.py  history.py  metrics.py  ragas_runner.py  testset_generator.py  visualize.py
src/graph/: __init__.py  agent.py  state.py  workflow.py
src/llm/: __init__.py  factory.py  registry.py
src/mcp_server/: __init__.py  __main__.py  auth.py  server.py  service.py
src/memory/: __init__.py  context_manager.py  extractor.py  models.py  service.py
src/observability/: __init__.py  client.py  context.py  decorators.py  langfuse_context.py  llm_tracker.py
src/rag/: __init__.py  document_manager.py
src/stores/: __init__.py  cache_store.py  doc_store.py  vector_store.py
src/tools/: __init__.py  base.py  registry.py
src/ui/: index.html  (+1 more)
tests/: conftest.py  test_bm25_persistence.py  test_chunk_refinement.py  test_config.py  test_context_manager.py  test_deterministic_ids.py  test_document_manager.py  test_indexing.py  test_ingestion_integrity.py  test_ingestion_pipeline_integration.py  test_langfuse_verification.py  test_metadata_enrichment.py  test_quality.py  test_query_processor.py  test_sparse_index.py  test_structured_loaders.py  test_table_semantic.py
(+66 files in other folders)
