[project]
name = "rag-project"
version = "0.1.0"
description = "企业级 RAG 系统 — 父子索引、混合检索、RRF 融合、LangGraph 编排、RAGAS 评估"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "redis[hiredis]>=5.0.0",
    "openai>=1.12.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langfuse>=2.50.0,<3.0.0",
    "ragas>=0.1.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "structlog>=24.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "sentence-transformers>=2.5.0",
    "networkx>=3.2.0",
    "duckduckgo-search>=5.0.0",
    "unstructured>=0.12.0",
    "python-docx>=1.1.0",
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "pypdf>=4.0.0",
    "docutils>=0.20.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "fakeredis[lua]>=2.20.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
